--- a/style.css
+++ b/style.css
@@ -10,6 +10,24 @@
 body{
     font-family: 'Lato', sans-serif;
 }
+.action-buttons {
+    padding: 30px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.action-buttons button {
+    padding: 10px 20px;
+    background-color: #fff;
+    border: 3px solid #445772;
+    margin: 0 10px;
+    border-radius: 20px;
+    font-weight: bold;
+    font-size: 1em;
+}
 .cards-container{
     display: flex;
     flex-direction: column;
